<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.View_SalesTrend">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground"
        tools:context=".common.View_Inventory"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-42dp">

        <TextView
            android:id="@+id/loginTitle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="cursive"
            android:text="@string/logInTitle"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/salesTrend_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/backButton" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="389dp"
            android:layout_height="468dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/addItemPriceName"
            app:layout_constraintBottom_toTopOf="@+id/salesTrend_Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/salestrendpic_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/adminButton"
            android:text="@string/generateButton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>